Extend test script with model training, add Dataset to .gitignore, refactor trainer arguments

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 **/*.log
 **/*.out
 
+./Dataset
+
 ## The .gitignore file specifies things that git should ignore. 
 ## This default template includes entries for R, Python and visual studio
 
